Made changes to sandbox, fixed wrong colored divs

--- a/frontend/src/themes/dark/_smui-theme.scss
+++ b/frontend/src/themes/dark/_smui-theme.scss
@@ -13,7 +13,6 @@
 
 @use "@material/typography/index" as typography;
 
-html,
 body {
   background: rgb(0,57,49);
   background: radial-gradient(circle, rgba(0,57,49,1) 0%, rgba(0,20,17,1) 100%);
